syntax = "proto3";

package sekai.db;

import "sekai/db/proto/descriptor.proto";

message Version {
  option (master_db_file)            = "versions.json";
  optional string system_profile     = 1 [(json_name) = "systemProfile"];
  optional string app_version        = 2 [(json_name) = "appVersion"];
  optional string multi_play_version = 3 [(json_name) = "multiPlayVersion"];
  optional string data_version       = 4 [(json_name) = "dataVersion"];
  optional string asset_version      = 5 [(json_name) = "assetVersion"];
  optional string app_hash           = 6 [(json_name) = "appHash"];
  optional string asset_hash         = 7 [(json_name) = "assetHash"];
  optional string app_version_status = 8 [(json_name) = "appVersionStatus"];
}
